--- a/.settings/org.eclipse.cdt.managedbuilder.core.prefs
+++ b/.settings/org.eclipse.cdt.managedbuilder.core.prefs
@@ -1,6 +1,8 @@
 eclipse.preferences.version=1
 environment/buildEnvironmentInclude/cdt.managedbuild.config.llvm.clang.win32.cygwin.exe.debug.2041459684/CPATH/delimiter=;
 environment/buildEnvironmentInclude/cdt.managedbuild.config.llvm.clang.win32.cygwin.exe.debug.2041459684/CPATH/operation=remove
+environment/buildEnvironmentInclude/cdt.managedbuild.config.llvm.clang.win32.cygwin.exe.debug.2041459684/CPLUS_INCLUDE_PATH/delimiter=;
+environment/buildEnvironmentInclude/cdt.managedbuild.config.llvm.clang.win32.cygwin.exe.debug.2041459684/CPLUS_INCLUDE_PATH/operation=remove
 environment/buildEnvironmentInclude/cdt.managedbuild.config.llvm.clang.win32.cygwin.exe.debug.2041459684/C_INCLUDE_PATH/delimiter=;
 environment/buildEnvironmentInclude/cdt.managedbuild.config.llvm.clang.win32.cygwin.exe.debug.2041459684/C_INCLUDE_PATH/operation=remove
 environment/buildEnvironmentInclude/cdt.managedbuild.config.llvm.clang.win32.cygwin.exe.debug.2041459684/append=true
